--- a/css-iniciantes/1_base/styles.css
+++ b/css-iniciantes/1_base/styles.css
@@ -135,3 +135,11 @@ h4 {
     border: 2px solid #123;
     margin: 30px;
 }
+
+.complete-box {
+    width: 200px;
+    height: 100px;
+    border: 2px solid #123;
+    padding: 50px 100px;
+    margin: 10px 20px 30px 40px;
+}
