--- a/css-iniciantes/1_base/styles.css
+++ b/css-iniciantes/1_base/styles.css
@@ -184,7 +184,7 @@ h4 {
     border: 2px solid #000;
 }
 
-
+/* absolute precisa de uma pai relative */
 .relative-container {
     margin-top: 300px;
     width: 300px;
