css iniciantes - base - resolucao exercicio 3

--- a/css-iniciantes/1_base/exercicios.css
+++ b/css-iniciantes/1_base/exercicios.css
@@ -1,3 +1,22 @@
+/* exercicio 1 */
 .background-highlight {
     background-color: yellow;
+}
+
+/* exercicio 2 */
+h1 {
+    background-color: lightblue;
+}
+
+.text-large {
+    font-size: 24px;
+}
+
+/* exercicio 3 */
+.hexa-color {
+    color: #1515e0;
+}
+
+.bg-opacity {
+    background-color: rgba(0, 0, 255, 0.5);
 }
