--- a/css-iniciantes/2_projeto-cards/styles.css
+++ b/css-iniciantes/2_projeto-cards/styles.css
@@ -12,3 +12,16 @@ body {
     background-color: #f0f0f0;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+.card-container {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+.user-image {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin-right: 10px;
+}
