--- a/css-iniciantes/2_projeto-cards/styles.css
+++ b/css-iniciantes/2_projeto-cards/styles.css
@@ -19,9 +19,53 @@ body {
     gap: 20px;
 }
 
+.user-card {
+    display: flex;
+    align-items: center;
+    background-color: #fff;
+    border: px solid #ccc;
+    border-radius: 10px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, .2);
+    padding: 10px 25px;
+    min-width: 355px;
+}
+
 .user-image {
     width: 100px;
     height: 100px;
     border-radius: 50%;
     margin-right: 10px;
+}
+
+.user-info {
+    padding: 10px;
+}
+
+.user-info h2,
+.user-info p {
+    margin: 15px 0;
+}
+
+.user-info p {
+    background-color: #f0f0f0;
+    padding: 8px;
+    border-radius: 5px;
+}
+
+.social-links {
+    display: flex;
+    gap: 10px;
+}
+
+.social-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    background-color: #007bff;
+    color: #fff;
+    text-decoration: none;
+    font-size: 20px;
+    border-radius: 50%;
 }
