--- a/css-iniciantes/3_recursos_avancados/style.css
+++ b/css-iniciantes/3_recursos_avancados/style.css
@@ -1,3 +1,7 @@
+html {
+    font-size: 15px;
+}
+
 /* 1 - estilos de listas */
 .lista-pontos {
     list-style-type: circle;
@@ -10,4 +14,32 @@
 .lista-imagem {
     list-style-type: none;
     list-style-image: url('img/circle.png');
+}
+
+
+.container {
+    width: 80%;
+    border: 1px solid blue;
+}
+
+.pixel-box {
+    width: 200px;
+    height: 100px;
+    border: 2px solid red;
+}
+
+.percent-box {
+    width: 50%;
+    height: 100px;
+    border: 1px solid green;
+}
+
+
+.em-text {
+    font-size: 2em;
+}
+
+
+.rem-text {
+    font-size: 2rem;
 }
