--- a/css-iniciantes/3_recursos_avancados/style.css
+++ b/css-iniciantes/3_recursos_avancados/style.css
@@ -93,3 +93,24 @@ html {
 .multiple-gradient-box {
     background-image: linear-gradient(to left, rgba(100, 150, 255), rgba(100, 80, 255)), radial-gradient(circle, red, orange, yellow);
 }
+
+/* 5 - text shadow e box shadow  */
+.box-shadow-example {
+    width: 300px;
+    height: 100px;
+    background-color: #f0f0f0;
+    box-shadow: 10px 10px 20px #000;
+}
+
+.text-shadow-example {
+    font-size: 30px;
+    color: #fff;
+    background-color: yellow;
+    text-shadow: 4px 4px 5px rgba(0, 0, 0, .5);
+}
+
+.multiple-shadow-box {
+    width: 300px;
+    height: 100px;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3);
+}
