--- a/css-iniciantes/3_recursos_avancados/exercicios.css
+++ b/css-iniciantes/3_recursos_avancados/exercicios.css
@@ -45,3 +45,11 @@
     border: 3px dotted #333;
     border-radius: 50px;
 }
+
+/* exercicio 2 */
+.paragraph {
+    line-height: 2;
+    text-indent: 20px;
+    padding: 10px;
+    width: 300px;
+}
