css iniciantes - projeto recursos avancados - resolucao exercicio 4

--- a/css-iniciantes/3_recursos_avancados/exercicios.css
+++ b/css-iniciantes/3_recursos_avancados/exercicios.css
@@ -53,3 +53,16 @@
     padding: 10px;
     width: 300px;
 }
+
+/* exercicio 4 */
+.left {
+    text-align: left;
+}
+
+.center {
+    text-align: center;
+}
+
+.right {
+    text-align: right;
+}
