css iniciantes - projeto recursos avancados - resolucao exercicio 5

--- a/css-iniciantes/3_recursos_avancados/exercicios.css
+++ b/css-iniciantes/3_recursos_avancados/exercicios.css
@@ -66,3 +66,21 @@
 .right {
     text-align: right;
 }
+
+/* exercicio 5 */
+button {
+    display: block;
+    margin: 20px;
+}
+
+.uppercase {
+    text-transform: uppercase;
+}
+
+.lowercase {
+    text-transform: lowercase;
+}
+
+.capitalize {
+    text-transform: capitalize;
+}
