css iniciantes - projeto recursos avancados - resolucao exercicio 7

--- a/css-iniciantes/3_recursos_avancados/exercicios.css
+++ b/css-iniciantes/3_recursos_avancados/exercicios.css
@@ -103,3 +103,22 @@ button {
     position: absolute;
     top: 0;
 }
+
+/* exercicio 7 */
+.horizontal-menu {
+    list-style-type: none;
+    display: flex;
+    gap: 20px;
+    background-color: #ccc;
+
+}
+
+.horizontal-menu li {
+    padding: 10px;
+    cursor: pointer;
+    transition: .4s;
+}
+
+.horizontal-menu li:hover {
+    background-color: #ddd;
+}
