--- a/hora-de-codar/flexbox/styles.css
+++ b/hora-de-codar/flexbox/styles.css
@@ -1,3 +1,7 @@
+body {
+    margin-bottom: 500px;
+}
+
 .container {
     background-color: #eee;
     border: 2px solid red;
@@ -17,4 +21,28 @@
     border: 2px solid blue;
     height: 50px;
     width: 50px;
+}
+
+.box {
+    background-color: #ccc;
+    border: 2px solid blue;
+    height: 50px;
+    flex-basis: 30px;
+}
+
+#item-1 {
+    flex-grow: 2;
+}
+
+#item-2,
+#item-3 {
+    flex-grow: 1;
+}
+
+#item-2 {
+    flex-basis: 100px;
+}
+
+#item-3 {
+    flex-shrink: 2;
 }
