--- a/menu/css/main.css
+++ b/menu/css/main.css
@@ -102,3 +102,31 @@ a.navbar-brand {
     font-size: 20px;
     box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
 }
+
+.btn-icon-left {
+    padding-left: 70px;
+}
+
+.btn-icon-left span.icon-left {
+    display: inline-block;
+    color: var(--color-white);
+    background-color: var(--color-primary);
+    width: 45px;
+    height: 45px;
+    position: absolute;
+    margin-left: -60px;
+    margin-top: -8px;
+    border-radius: 15px;
+    text-align: center;
+    padding-top: 8px;
+}
+
+.btn-sm  {
+    padding: 9px 15px !important;
+    border-radius: 15px !important;
+    font-size: 18px !important; 
+}
+
+.btn-social {
+    width: 50px;
+}
