--- a/menu/css/main.css
+++ b/menu/css/main.css
@@ -22,6 +22,7 @@
     --color-separate: #cccccc;
 }
 
+
 html, body {
     font-family: 'PoppinsRegular', 'Rubik', sans-serif;
     background-color: var(--color-background);
@@ -30,6 +31,10 @@ html, body {
 
 b {
     font-family: 'PoppinsMedium', 'Rubik', sans-serif;
+}
+
+.hidden {
+    display: none !important;
 }
 
 .color-primary {
@@ -366,6 +371,16 @@ a.navbar-brand {
     background-size: cover;
 }
 
+#depoimento-2 .imagem-depoimento {
+    background-image: url(../img/ana.jpg);
+    background-size: cover;
+}
+
+#depoimento-3 .imagem-depoimento {
+    background-image: url(../img/joao.jpg);
+    background-size: cover;
+}
+
 .nome-depoimento {
     color: var(--color-black);
     font-size: 22px;
@@ -378,4 +393,34 @@ a.navbar-brand {
 
 .nota-depoimento span {
     color: var(--color-black);
+}
+
+.texto-depoimento {
+    display: flex;
+    font-size: 16px;
+    color: var(--color-black);
+}
+
+.texto-depoimento i {
+    font-size: 35px;
+    color:  var(--color-primary);
+}
+
+.texto-depoimento i:first-child {
+    padding-left: 10px;
+    padding-right: 35px;
+}
+
+.texto-depoimento i:last-child {
+    padding-left: 45px;
+    display: flex;
+    justify-content: center;
+}
+
+.background-depoimentos {
+    position: absolute;
+    left: 0;
+    right: 0;
+    height: 400px;
+    background-image: url(../img/bg-icons-1.png);
 }
