--- a/menu/css/main.css
+++ b/menu/css/main.css
@@ -424,3 +424,28 @@ a.navbar-brand {
     height: 400px;
     background-image: url(../img/bg-icons-1.png);
 }
+
+.reserva {
+    padding-top: 100px;
+    padding-bottom: 150px;
+}
+
+.card-secondary {
+    background-color: var(--color-secondary);
+    border-radius: 70px;
+    padding: 90px;
+}
+
+.card-reserva {
+    height: 320px;
+    width: 320px;
+    border-radius: 120px;
+    background-color: var(--color-white);
+    position: absolute;
+    right: 0;
+    top: -25px;
+}
+
+.reserva .img-banner img {
+    width: 100%;
+}
