projeto menu - corrige css referente a etapa do carrinho

--- a/menu/css/main.css
+++ b/menu/css/main.css
@@ -543,7 +543,7 @@ footer {
     content: none;
 }
 
-.etapa.active .etapa.active::before {
+.etapa.active  {
     background-color: var(--color-primary);
 }
 
